# vidForge

./: .gitignore  AGENTS.md  IMPLEMENTATION.md  Makefile  PROGRESS.md  README.md  package-lock.json  session-ses_1f45.md
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_thumbnail_path.py  003_rbac.py  004_provider_support.py  005_add_job_provider_preference.py  006_add_job_model_preference.py  007_add_job_stage_and_scenes.py  008_add_poe_models.py  009_add_scene_media_fields.py  010_clean_music_video_scene_template.py  011_add_media_library.py  012_add_projects.py  013_add_job_title.py  014_add_app_settings.py  015_add_chatbot_tables.py  016_add_avatar_tables.py  017_add_lora_columns_to_avatars.py  018_add_model_configs_table.py  019_add_media_assets_cost.py  020_add_message_job_id.py  021_add_job_chat_link.py  022_sync_atlascloud_capabilities_from_poe.py  023_normalize_user_settings_model_preferences.py  024_add_error_events.py  024_add_scene_warnings.py  025_add_media_events.py  026_unify_model_tables_into_model_configs.py  027_model_configs_is_active_default_false.py  028_add_object_refs_tables.py  (+13 more)
backend/app/: cli.py  config.py  database.py  main.py
backend/scripts/: backfill_media_metadata.py
backend/styles/: anime.yaml  manga.yaml  realistic.yaml
backend/templates/: music_video.yaml  music_video_scene.yaml
backend/tests/: conftest.py  test_api.py  test_avatar_api.py  test_object_api.py  test_script_parser.py  test_video_processor.py
(+527 files in other folders)
